[package]
name = "tiberius-mappers-derive"
version = "0.3.0"
edition = "2021"
description = "Derive macros for tiberius-mappers"
license = "MIT"
repository = "https://github.com/stevewillcock/tiberius-mappers"


[dependencies]
quote = "1.0.33"
syn = "2.0.37"
proc-macro2 = "1"

[lib]
proc-macro = true

