[package]
name = "tiberius-mappers-derive"
version = "0.7.0"
edition = "2024"
description = "Derive macros for tiberius-mappers"
license = "MIT"
repository = "https://github.com/stevewillcock/tiberius-mappers"


[dependencies]
quote = "1.0.40"
syn = "2.0.104"
proc-macro2 = "1"

[lib]
proc-macro = true

